adapted complete example

--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -340,10 +340,10 @@ create a pseudo-topography with adequate pseudo-depth at which you draw the cont
 
 
 %---------------------------------------------
-\section{Determination of analysis parameters}
+\section{Determination of analysis parameters\label{sec:determiationparameters}}
 %---------------------------------------------
 
-Two key parameters have to be adjusted before running an analysis: the correlation length ($L$) and the signal-to-noise ratio ($\snr$). Several tools are provided in order to help the user for the determination of these parameters.
+Two key parameters have to be adjusted before running an analysis: the correlation length scale ($L$) and the signal-to-noise ratio ($\snr$). Several tools are provided in order to help the user for the determination of these parameters.
 
 
 \subsection{\command{divafit} \label{sec:divafit}}
