le répertoire de travail pour la 3D a changé

--- a/15-3DAnalyses.tex
+++ b/15-3DAnalyses.tex
@@ -2,7 +2,7 @@
 
 \diva can be used to perform 3D-analysis for a given variable in an oceanic basin. In this case \diva tools are generally applied to successive horizontal layers at different depths of the basin. The resulting 2D-field analyses are gathered in 3D binary and NetCDF files.
 
-The working directory to perform 3D-analyses is the same as for 2D-analyses: \linebreak \directory{diva-4.6.1/DIVA3D/divastripped}.
+The working directory to perform 3D-analyses is NOT the same as for 2D-analyses (the paths of this Chapter have to be corrected): \directory{diva-4.6.1/JRA4/Climatology}.
 
 %\newpage % 
 
