--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -198,6 +198,16 @@
   url = {www.adv-geosci.net/28/29/2010/}
 }
 
+@UNPUBLISHED{BARTH13,
+  author = {A. Barth and J.-M- Beckers and C. Troupin and A. Alvera-Azc\'arate
+	and L. Vandenbulcke},
+  title = {{\texttt{divand}-1.0: n-dimensional variational data analysis for
+	ocean}},
+  note = {submitted to } # gmd,
+  owner = {ctroupin},
+  timestamp = {2013.10.21}
+}
+
 @ARTICLE{BECKERS06,
   author = {Beckers, J.-M. and A. Barth and A. Alvera-Azc\'{a}rate},
   title = {{DINEOF} reconstruction of clouded images including error maps. {A}pplication
