--- a/climatocook.tex
+++ b/climatocook.tex
@@ -72,10 +72,10 @@
 
 \begin{document}
 
-\chapter{DIVA Recipes, V3.0}
+\chapter{DIVA recipe for climatology productions}
 
 
-A cook-book for creating climatologies with \Diva, adapted for use with ODV4 spreadsheets.
+This is a short cook-book for creating climatologies with \Diva, adapted for use with ODV4 spreadsheets.
 
 
 
@@ -96,7 +96,7 @@ After this, you should have topographic files {\tt topo.grd} and {\tt TopoInfo.d
 {\bf NOTE}: do not use a too fine topography, this will lead to unnecessarily complex boundaries and too fine meshes near the coasts. For plotting purposes you can always overlay finer coastlines than those used for the analysis.
 (To decrease the resolution of the {\tt gebco} topographie, you can invoke for example {\tt gebco2diva 2 3} that subsamples the original {\tt topo.gebco} file  by using every second point in x and third in y direction only)
 
-{\bf NOTE}: coordinates and files must be decimal numbers with decimal separators {\tt .} and not {\tt ,} as found in some country local settings. Also note that longitude-latitude coordinates must be decimal. ODV exported files sometimes have the origin of longitude in 0, but since ODV4 there is an option to choose $[$0:360$]$ or $[$-180:180$]$. If your domain includes the Greenwich meridian and if your data extraction goes via an ODV spreadsheat export on $[$0:360$]$, you might therefore need to adapt {\tt divaselectorODV4} to change the coordinate origin.
+% {\bf NOTE}: coordinates and files must be decimal numbers with decimal separators {\tt .} and not {\tt ,} as found in some country local settings. Also note that longitude-latitude coordinates must be decimal. ODV exported files sometimes have the origin of longitude in 0, but since ODV4 there is an option to choose $[$0:360$]$ or $[$-180:180$]$. If your domain includes the Greenwich meridian and if your data extraction goes via an ODV spreadsheat export on $[$0:360$]$, you might therefore need to adapt {\tt divaselectorODV4} to change the coordinate origin.
 
 
 \section{Metainformation}
@@ -108,7 +108,7 @@ After this, you should have topographic files {\tt topo.grd} and {\tt TopoInfo.d
 
 \section{Levels}
 
-\begin{enumerat}
+\begin{enumerate}
 \item Decide at which values of depth you want the analysis. At the minimum you typically need to include IODE standard depth (provided as en example in {\tt contour.depth.iode}). Think about adding levels which are representative of particular water masses.
 \item Encode these analysis depths  in file {\tt contour.depth} (first the deepest level, up to the uppermost layer, all depth values being positive).
 \end{enumerate}
@@ -118,9 +118,10 @@ After this, you should have topographic files {\tt topo.grd} and {\tt TopoInfo.d
 \section{Data}
 
 
+
 \begin{enumerate}
-\item
-For easy use, import your data into Ocean Data View (ODV, found at \url{http://odv.awi.de/}). You can for example extract data from the world ocean atlas at \url{http://www.nodc.noaa.gov/OC5/SELECT/dbsearch/dbsearch.html} and choose the export in the native world ocean atlas. This allows a direct import of the file into ODV.
+\item If you already have a series of ODV4 spreadsheet files, you can proceed to step 6.
+\item Otherwise import your data into Ocean Data View (ODV, found at \url{http://odv.awi.de/}). You can for example extract data from the world ocean atlas at \url{http://www.nodc.noaa.gov/OC5/SELECT/dbsearch/dbsearch.html} and choose the export in the native world ocean atlas. This allows a direct import of the file into ODV.
 \item Once imported in ODV you can apply some selection criteria if you want to reduce the amount of data exported for \diva 
 \item Then export the data you want as ODV generic spreadsheat and name this exported file as you want, for example {\tt woaODV.txt}) and if possible, take already care of the longitude range  $[$0:360$]$ or $[$-180:180$]$ according to your needs. For european projects, the range $[$-180:180$]$  is the most appropriate.
 \item Look at the header of the exported file to have an idea of the name of the variables that are in the file (use command {\tt head -40 woaODV.txt}). If in doubt, apply {\tt divaguessforms woaODV.txt} that will create file {\tt ODVcolumns} which includes names of variables and the columns in which to find them.
@@ -128,7 +129,7 @@ For easy use, import your data into Ocean Data View (ODV, found at \url{http://o
 \end{enumerate}
 {\bf NOTE}: if original data export was done with pressure (in dbar) vertical coordinate, you can either chose to map it as if they were meters or apply the Saunders correction. In both cases, you MUST tell {\tt divaselectorODV4} to use pressure coordinate as input by editing {\tt driver} and assigning a special value to the dataextraction flag: -1 to use pressure coordinate and assume they are meters. Flag value -10 to use pressure coordinates and transform to meters by using the Saunders approach.
 
-{\bf NOTE}: do not forget to deal adequately with data elimination based on quality flags, either before importing in ODV, selection within ODV, during export from ODV or when using {\tt divaselectorODV4} with file {\tt qflag}. Make sure  you export the quality flags with the data and you know their meaning.
+{\bf NOTE}: do not forget to deal adequately with data elimination based on quality flags, either before importing in ODV, selection within ODV, during export from ODV or when using {\tt divaselectorODV4} with file {\tt qflist}. Make sure  you export the quality flags with the data and you know their meaning. Also make sure all files you use exploit the SAME quality flags.
 
 
 
@@ -145,7 +146,7 @@ For easy use, import your data into Ocean Data View (ODV, found at \url{http://o
 \item
 Decide on the output grid you want (normally the original region of interest, see beginning of the recipe). Output resolution is the one you want for the gridded field and has nothing to do with the correlation length of the field, except that you generally chose the grid spacing much smaller than the correlation length.
 \item Edit {\tt param.par} and define the grid as desired.
-\item Decide on your coordinate change {\tt ireg}
+\item Decide on your coordinate change via {\tt ireg}
 \end{enumerate}
 
 
@@ -159,7 +160,7 @@ Decide on the output grid you want (normally the original region of interest, se
 \item Run {\tt divadoall} including generation of contours if not yet done
 \item Check 4D output netCDF file and verify if all data seem you asked to be included have been used.
 \end{enumerate}
-If it was not successful, check for implementation errors (be careful about end-of-line problems (remember {\tt dos2unix}), file permissions, limited disk space, input-data file formats, too fine coastlines leading to memory problems etc). In doubt, retry the example provided with the distribution to see if the problems stems from your data and implementation or the software itself.
+If it was not successful, check for implementation errors (be careful about end-of-line problems (remember {\tt dos2unix}), file permissions, limited disk space, input-data file formats, too fine coastlines leading to memory problems, strange characters in input files etc). In doubt, retry the Example4D provided with the distribution to see if the problems stems from your data and implementation or the software itself.
 
 
 If this step with your own data and region is successful you can proceed to the actual climatology production.  
@@ -170,7 +171,7 @@ This is a critical part of the climatology production and the definition of the 
 
 \begin{enumerate}
 \item Adapt {\tt yearlist, monthlist, varlist} to define the reference field
-\item Use a large correlation length 
+\item Use a large correlation length (eg one tenth of the domain length)
 \item Use a semi-normed analysis (with extrapolations in regions void of data) (analysis flag for reference fields 2, 21, 22, 23)
 \item Use a not too high signal to noise ratio (one or less)
 \item Run the analysis
@@ -193,7 +194,7 @@ Only if you are happy with the reference fields you can proceed to fine tuning.
 \item Make the analysis
 \item Check analysis carefully. If not ok, try again with other parameters. If analysis ok, proceed further
 \item Possibly apply outlier elimination
-\item Perform final analysis with full error calculation
+\item Perform final analysis with full error calculation ({\tt ispec -107})
 \item Submit so-obtained climatology to experts for internal reviewing. If not ok, fine tune parameters. If ok, proceed to submit to oceanBrowser and sextant.
 \end{enumerate}
 
