--- a/climatocook.tex
+++ b/climatocook.tex
@@ -193,7 +193,7 @@ Only if you are happy with the reference fields you can proceed to fine tuning.
 \item Adapt metainformation to reflect climatology definition
 \item Make the analysis
 \item Check analysis carefully. If not ok, try again with other parameters. If analysis ok, proceed further
-\item Possibly apply outlier elimination
+\item Possibly apply outlier elimination. If there are severe or a lot of outliers you might consider recalibrating signal/noise ratios after outlier elimination.
 \item Perform final analysis with full error calculation ({\tt ispec -107})
 \item Submit so-obtained climatology to experts for internal reviewing. If not ok, fine tune parameters. If ok, proceed to submit to oceanBrowser and sextant.
 \end{enumerate}
